assets/css/style.css
body {
    margin: 0px;
    padding: 0px;
    background-image: url("../images/background.png");
}

footer {
    border-top: solid 8px #4aaaa5;
    background-color: #666666;
    height: 100%;
    padding: 20px 0 0 0;
}

footer h5 {
    text-align: center;
    color: #AAAAAA;
    margin-bottom: 5px;
}

.header {
    overflow: hidden;
    background-color: #ffffff;
    height: 100%;
    color: #B5A7A0;
    font-family: 'Georgia', Times, 'Times New Roman', serif;
    border-bottom: 2px solid #cccccc;
}

.header-content {
    width: 960px;
    margin: auto;
}

.yourName {
    width: 350px;
    height: 100%;
    background-color: #4aaaa5;
    color: #FFFFFF;
    text-align: center;
    float: left;
}

.header-right {
    width: 300px;
    height: 100%;
    text-align: left;
    float: right;
}

.header a {
    float: left;
    padding: 15px 15px 0 15px;
    text-decoration: none;
}

.header a:link {
    color:  #B5A7A0;
}

.header a:visited {
    color:  #B5A7A0;
}

.header a:hover {
    text-decoration: none;
    background-color: #cccccc;
    color: #FFFFFF;
    padding: 9.5px 15px;
}

.container {
    width: 896px;
    margin-top: 35px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 115px;
    padding: 0px 30px;
    border: solid 2px #dddddd;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    color: #777777;
    overflow: hidden;
    background-color: #ffffff;
}

#aboutMeHeader {
    height: 70px;
    color: #4aaaa5;
    border-bottom: solid 2px #cccccc;
    padding: 10px 10px;
    margin-bottom: 25px;
}

#profilePic {
    height: 200px;
    float: left;
    margin: 0 20px 20px 0;
}

.img-container {
    display: block;
    height: 300px;
    width: 300px;
    float: left;
}

.img-container img {
    height: 200px;
}

.img-container p {
    margin: 0;
}

